--- a/CurioSDK.Sample/CurioIOSSDKSample/CurioIOSSDKSample/en.lproj/MainStoryboard_iPhone.storyboard
+++ b/CurioSDK.Sample/CurioIOSSDKSample/CurioIOSSDKSample/en.lproj/MainStoryboard_iPhone.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8187.4" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="3">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9059" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="3">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8151.3"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9049"/>
     </dependencies>
     <scenes>
         <!--Navigation Controller-->
@@ -11,6 +11,7 @@
                 <navigationController id="3" sceneMemberID="viewController">
                     <navigationBar key="navigationBar" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" id="4">
                         <autoresizingMask key="autoresizingMask"/>
+                        <animations/>
                     </navigationBar>
                     <connections>
                         <segue destination="12" kind="relationship" relationship="rootViewController" id="19"/>
@@ -27,6 +28,7 @@
                     <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="13">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
                             <tableViewCell contentMode="scaleToFill" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="Cell" textLabel="phq-AM-6qj" style="IBUITableViewCellStyleDefault" id="lJ0-d7-vTF">
@@ -39,12 +41,15 @@
                                         <label opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="phq-AM-6qj">
                                             <rect key="frame" x="15" y="0.0" width="270" height="43.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
+                                            <animations/>
                                             <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                             <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                             <color key="highlightedColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                         </label>
                                     </subviews>
+                                    <animations/>
                                 </tableViewCellContentView>
+                                <animations/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <connections>
                                     <segue destination="21" kind="push" identifier="showDetail" id="jZb-fq-zAk"/>
@@ -77,6 +82,7 @@
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Jml-tT-4WF">
                                 <rect key="frame" x="73" y="224" width="173" height="30"/>
+                                <animations/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="K8j-1U-rRi"/>
                                     <constraint firstAttribute="width" constant="173" id="tKL-VD-e2B"/>
@@ -91,6 +97,7 @@
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8pT-MF-HKj">
                                 <rect key="frame" x="73" y="262" width="173" height="30"/>
+                                <animations/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="DD3-pO-WCN"/>
                                     <constraint firstAttribute="width" constant="173" id="KTb-Hq-hbQ"/>
@@ -105,6 +112,7 @@
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vry-mK-TIc">
                                 <rect key="frame" x="73" y="72" width="173" height="30"/>
+                                <animations/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="173" id="5eE-XM-UJz"/>
                                     <constraint firstAttribute="height" constant="30" id="xX9-RK-9Kj"/>
@@ -119,6 +127,7 @@
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hhh-mk-G6Z">
                                 <rect key="frame" x="73" y="110" width="173" height="30"/>
+                                <animations/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="173" id="8Cs-0P-qPo"/>
                                     <constraint firstAttribute="height" constant="30" id="Lx9-kS-e0P"/>
@@ -133,6 +142,7 @@
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="e4W-zT-RgQ">
                                 <rect key="frame" x="73" y="148" width="173" height="30"/>
+                                <animations/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="8Mj-y0-O8U"/>
                                     <constraint firstAttribute="width" constant="173" id="ikQ-Zh-14c"/>
@@ -147,6 +157,7 @@
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MEU-g7-ae7">
                                 <rect key="frame" x="73" y="186" width="173" height="30"/>
+                                <animations/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="173" id="S3X-5Z-gGq"/>
                                     <constraint firstAttribute="height" constant="30" id="qjO-PI-5PE"/>
@@ -159,16 +170,49 @@
                                     <action selector="sendLocation:" destination="21" eventType="touchUpInside" id="RvF-KE-84F"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5wl-IW-BWw">
+                                <rect key="frame" x="94" y="300" width="132" height="30"/>
+                                <animations/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="132" id="HYI-em-wKb"/>
+                                    <constraint firstAttribute="height" constant="30" id="R0k-sk-g9G"/>
+                                </constraints>
+                                <state key="normal" title="Send User Tags">
+                                    <color key="titleShadowColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="sendUserTags:" destination="21" eventType="touchUpInside" id="tA5-gl-XrP"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YqM-Oa-HQU">
+                                <rect key="frame" x="97" y="338" width="126" height="30"/>
+                                <animations/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="126" id="Gq6-Pj-2mV"/>
+                                    <constraint firstAttribute="height" constant="30" id="cB9-TQ-OuJ"/>
+                                </constraints>
+                                <state key="normal" title="Get User Tags">
+                                    <color key="titleShadowColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="getUserTags:" destination="21" eventType="touchUpInside" id="mjK-DX-USp"/>
+                                </connections>
+                            </button>
                         </subviews>
+                        <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="5wl-IW-BWw" firstAttribute="top" secondItem="8pT-MF-HKj" secondAttribute="bottom" constant="8" id="5I4-t1-znA"/>
                             <constraint firstItem="Jml-tT-4WF" firstAttribute="top" secondItem="MEU-g7-ae7" secondAttribute="bottom" constant="8" id="Egc-Fp-vVD"/>
                             <constraint firstAttribute="centerX" secondItem="Jml-tT-4WF" secondAttribute="centerX" id="IhC-hO-nuZ"/>
                             <constraint firstAttribute="centerX" secondItem="vry-mK-TIc" secondAttribute="centerX" id="KEy-ST-mhS"/>
+                            <constraint firstItem="YqM-Oa-HQU" firstAttribute="top" secondItem="5wl-IW-BWw" secondAttribute="bottom" constant="8" id="KI1-Ih-yGT"/>
                             <constraint firstAttribute="centerX" secondItem="MEU-g7-ae7" secondAttribute="centerX" id="OQ6-eD-5xr"/>
                             <constraint firstItem="MEU-g7-ae7" firstAttribute="top" secondItem="e4W-zT-RgQ" secondAttribute="bottom" constant="8" id="X7w-fm-ZTf"/>
+                            <constraint firstItem="YqM-Oa-HQU" firstAttribute="centerX" secondItem="22" secondAttribute="centerX" id="a0M-OP-1rq"/>
                             <constraint firstAttribute="centerX" secondItem="hhh-mk-G6Z" secondAttribute="centerX" id="bqN-QL-3uF"/>
                             <constraint firstItem="e4W-zT-RgQ" firstAttribute="top" secondItem="hhh-mk-G6Z" secondAttribute="bottom" constant="8" id="c4y-fQ-gNO"/>
+                            <constraint firstItem="5wl-IW-BWw" firstAttribute="centerX" secondItem="22" secondAttribute="centerX" id="fAx-Ka-CW3"/>
                             <constraint firstItem="8pT-MF-HKj" firstAttribute="top" secondItem="Jml-tT-4WF" secondAttribute="bottom" constant="8" id="gv8-B6-MIj"/>
                             <constraint firstAttribute="centerX" secondItem="e4W-zT-RgQ" secondAttribute="centerX" id="kcF-SV-vzS"/>
                             <constraint firstItem="hhh-mk-G6Z" firstAttribute="top" secondItem="vry-mK-TIc" secondAttribute="bottom" constant="8" id="m21-eg-6n6"/>
